--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background: hsl(233, 47%, 7%);
     font-size: 15px;
+    font-family: 'Lexend Deca', sans-serif;
 }
 .container{
     background: hsl(233, 47%, 7%);
