--- a/style.css
+++ b/style.css
@@ -4,84 +4,210 @@ body{
     font-family: 'Lexend Deca', sans-serif;
 }
 .container{
-    background: hsl(233, 47%, 7%);
-    display: flex;
-    align-content: center;
-    margin: 150px;
-    font-family: sans-serif;
+    width: 1000px;
     box-sizing: border-box;
-    border-radius: 3px;
-}
-img{
-    height: 400px;
-    border-radius: 3px;
+    border-radius: 10px;
+    background-origin: border-box;
+    display: flex;
+    background: hsl(233, 47%, 7%);
+    align-content: center;
+    margin: 110px 200px;
+    font-family: sans-serif;
 }
 .container-1{
-    background:  hsl(244, 38%, 16%);
-    color: white;
-    text-align: center;
+    background-color: hsl(244, 38%, 16%);
     width: 50%;
-    margin-top: -2px;
+    padding-top: 50px;
+    padding-left: 40px;
+    padding-bottom: -50px;
+    padding-right: 70px;
+    align-items: center;
+    justify-content: center;
+    
 }
-span{
-    color: hsl(277, 64%, 61%);
-}
-
-h2{
-    margin: 50px;
-    color: hsl(0, 0%, 100%);
-    display: block;
+.main-heading{
+    color:  hsl(0, 0%, 100%);
     font-weight: 700;
-    margin-left: -10px;
-    font-size: xx-large;
+    font-size: 1.8rem;
 }
-p{
-    color:hsla(0, 0%, 100%, 0.75) ;
-    margin-top: -10px;
-    display: block;
-    padding: 5px;
-    justify-content: space-between;
-    letter-spacing: 1px;
-    margin-top: -20px;
+.main-heading span{
+    color:  hsl(277, 64%, 61%);
 }
-.e{
-    margin-left: -20px;
+.main-paragraph-1{
+    font-weight: 300;
+    color: hsla(0, 0%, 100%, 0.75);
+    font-size: 0.8rem;
+    
 }
-.f{
-    margin-left: -110px;
-}
-.class{
+.about{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
+.about-heading{
+    color: hsl(0, 0%, 100%);
+    padding-top: 50px;
 }
-.class-1{
-    margin-top:40px;
-    margin-left: 80px;
-    margin-right: 35px;
+
+.about-paragraph{
+    color: hsla(0, 0%, 100%, 0.6);
 }
-.class-2{
-    margin-top: 40px;
-    margin-left: 20px;
-    margin-right: 30px;
+.container-2{
+    margin: 0;
+    padding: 0;
 }
-.class-3{
-    margin-top: 40px;
-    margin-left: 20px;
+.image-wrapper{
+    width: 100%;
+    background: linear-gradient(to top, hsl(277, 64%, 61%)), url(images/image-header-desktop.jpg) center no-repeat;
+    background-size: cover;
+    height: 100%;
 }
-.a{
-    margin-left: -40px;
+img{
+    width: 100%;
+    image-resolution: hsl(277, 64%, 61%);
 }
-.b{
-    margin-left: -50px;
+@media (max-width:1400px) {
+    .container{
+        font-size: 8px;
+        box-sizing: border-box;
+        border-radius: 10px;
+    }
+    .container-1{
+        width: 50%;
+    }
+    .main-heading{
+        font-size: 1.8rem;
+        font-weight: 700;
+    }
+    .main-paragraph-1{
+        font-size: 0.8rem;
+        margin-bottom: -5px;
+    }       
+    .about{
+
+        font-weight: 400;
+    }
 }
-.c{
-    margin-left: -30px;
+@media (max-width:1200px) {
+    .container-1{
+        width: 50%;
+    }
+    .main-heading{
+        font-size: 1.5rem;
+        margin-top: -10px;
+    }
+    .main-paragraph-1{
+        font-size: 0.7rem;
+    }
+    .about-paragraph{
+        margin-top: -10px;
+    }
+    .about-2{
+        margin-top: -10px;
+    }
 }
-nav{
-    color:hsla(0, 0%, 100%, 0.6) ;
-    margin-top: 10px;
-    font-size: 14px;
+@media (max-width:1000px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        border-radius: 10px;
+        margin-bottom: -150px;
+        
+    }
+.container-1{
+    order: 2;
+    
+}    
+.container-2{
+    order: 1;
+    width: 50%;
 }
-br{
-    margin-bottom: 5px;
+img{
+    width: 86%;
+}
+.main-heading{
+    font-size: 1.4rem;
+    text-align: center;
+}
+.main-paragraph-1{
+    font-size: 0.75rem;
+    font-weight: 400;
+    text-align: center;
+    
+}
+.about{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.9rem;
+    margin-bottom: 30px;
+}
+.about-1{
+    margin-top: -30px;
+    padding-bottom: -50px;
+    text-align: center;
+}
+.about-heading{
+    margin-top: -10px;
+}
+.about-paragraph{
+    margin-top: -10px;
+}
+.about-2{
+    margin-top: -20px;
+    padding-top: -20px;
+}
+.about-1,.about-2 ,.about-3{
+    margin-top: -20px;
+    text-align: center;
+}
+}
+@media (max-width:900px) {
+    .container-2{
+        width: 85%;
+    }
+    .main-heading{
+        font-weight: 700;
+        font-size: 1.3rem;
+        margin-left: -5px;
+        margin-right: -5px;
+    }
+}
+@media (max-width:800px) {
+    .container{
+        width: 68%;
+        height: 100vh;
+    }
+}
+@media (max-width:450px) {
+    .container-2{
+        width: 107%;
+    }
+    .main-heading{
+        font-size: 1.6rem;
+    }
+    .main-paragraph-1{
+        font-size: 0.9rem;
+    }
+}
+@media (max-width:400px) {
+    .container-2{
+        width: 118%;
+    }
+    .main-heading{
+        font-size: 1.7rem;
+    }
+    .main-paragraph-1{
+        font-size: 0.9rem;
+    }
+    @media (max-width:320px) {
+        .container-2{
+            width: 126%;
+        }
+        
+    }
+    
 }
